# cipherpay

./: .gitignore  Anchor.toml  Cargo.toml  Dockerfile  README.md  brand.md  jest.config.js  package.json  tsconfig.json
cipherpay-agent/: SKILL.md
cipherpay-agent/scripts/: cipherpay_agent_state.mjs
docs/cloak-migration/: 01-remove-magicblock.md  02-cloak-sdk-foundation.md  03-database-and-types.md  04-manual-pay.md  05-bulk-pay-and-recovery.md  06-history-testing-rollout.md  README.md
programs/cipherpay/: Cargo.toml
programs/cipherpay/src/: errors.rs  events.rs  lib.rs
programs/cipherpay/src/instructions/: cancel_payout_run.rs  create_payout_item.rs  create_payout_run.rs  execute_payout_item.rs  execute_payout_items.rs  fund_payout_run.rs  init_invoice.rs  init_user.rs  initialize_treasury.rs  mod.rs  pay.rs  refund_payout_run.rs  set_treasury_pause.rs
programs/cipherpay/src/state/: invoice.rs  mod.rs  payout_item.rs  payout_receipt.rs  payout_run.rs  receipt.rs  treasury.rs  user_account.rs
programs/cipherpay/tests/: payout_protocol.rs
scripts/: devnet-payout-smoke.ts
tests/: README.md  cipherpay.ts  magicblock-amounts.test.js  ts-transformer.cjs
web/: README.md  next.config.ts  package.json  pnpm-lock.yaml  tailwind.config.ts
web/db/: 001_phase1_schema.sql  002_phase1_core_payout_runs.sql  003_magicblock_private_payouts.sql  004_cloak_private_payouts.sql  005_agent_pay_drafts.sql  006_payables.sql  007_private_payout_balances.sql  008_agent_pay_overhaul.sql  009_agent_pay_funding_utxos.sql  010_waitlist_signups.sql
web/scripts/: cipherpay-mcp.mjs  (+1 more)
(+132 files in other folders)
