[package]
name = "cipherpay"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cipherpay"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = {version = "0.31.0", features = ["init-if-needed"]}
anchor-spl = {version = "0.31.0"}

[dev-dependencies]
anchor-litesvm = "0.2.0"
solana-sdk = "2.2.1"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
